tests/idris2/perror016/expected
1/1: Building ParseIf (ParseIf.idr)
Error: Couldn't parse any alternatives:
1: Expected 'then'.

ParseIf:3:26--3:30
 1 | 
 2 | test : Int -> Int
 3 | test a = if a < 10 the 0 else a
                              ^^^^
... (14 others)
